<resources>
    <string name="app_name">LoginRegisterFirebase</string>

    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verify_again">Send Verify Email Again</string>
    <string name="enterEmailId">Enter the registered Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="full_name">Fulll name</string>
    <string name="full_name_hint">Nguyen Van A</string>
    <string name="phone_number">Phone</string>
    <string name="phone_hint">0384735254</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="notice">Vui lòng chọn ảnh chỉ có mình bạn và đủ sáng</string>
</resources>